// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configArgs config 1 arg 1`] = `
Args {
  "value": Array [
    Object {
      "invalidCases": undefined,
      "name": "a",
      "optional": true,
      "validCases": Array [
        1,
        undefined,
      ],
    },
  ],
}
`;

exports[`configArgs config 2 args 1`] = `
Args {
  "value": Array [
    Object {
      "invalidCases": undefined,
      "name": "a",
      "optional": false,
      "validCases": Array [
        1,
      ],
    },
    Object {
      "invalidCases": undefined,
      "name": "b",
      "optional": true,
      "validCases": Array [
        2,
        undefined,
      ],
    },
  ],
}
`;

exports[`configArgs config object args 1`] = `
Args {
  "value": Array [
    Object {
      "invalidCases": Array [],
      "name": "a",
      "optional": true,
      "validCases": Array [
        Object {
          "invalidCases": Array [],
          "name": "b",
          "validCases": Array [
            Object {
              "invalidCases": undefined,
              "name": "c",
              "optional": false,
              "validCases": Array [
                1,
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`configArgs empty args 1`] = `
Args {
  "value": Array [],
}
`;

exports[`configArgs has initial config 1`] = `
Args {
  "value": Array [
    Object {
      "invalidCases": undefined,
      "name": "a",
      "optional": false,
      "validCases": Array [
        1,
      ],
    },
  ],
}
`;

exports[`configArgs validate args add undefined to valid case 1`] = `
Args {
  "value": Array [
    Object {
      "invalidCases": undefined,
      "name": "a",
      "optional": true,
      "validCases": Array [
        1,
        undefined,
      ],
    },
  ],
}
`;

exports[`configArgs validate args add undefined to valid case 2`] = `
Args {
  "value": Array [
    Object {
      "invalidCases": undefined,
      "name": "a",
      "optional": true,
      "validCases": Array [
        1,
        undefined,
      ],
    },
  ],
}
`;
